@@ -23,7 +23,6 @@
 package no.entur.schema2proto.wire;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -81,14 +80,14 @@ public class MutableEnumType extends MutableType {
 	public void addReserved(String documentation, Location location, int tag) {
 		boolean alreadyReserved = reserveds.stream().anyMatch(reservation -> reservation.matchesTag(tag));
 		if (!alreadyReserved) {
-			reserveds.add(new Reserved(location, documentation == null ? "" : documentation, Arrays.asList(tag)));
+			reserveds.add(new Reserved(location, documentation == null ? "" : documentation, List.of(tag)));
 		}
 	}
 
 	public void addReserved(String documentation, Location location, String constantName) {
 		boolean alreadyReserved = reserveds.stream().anyMatch(reservation -> reservation.matchesName(constantName));
 		if (!alreadyReserved) {
-			reserveds.add(new Reserved(location, documentation == null ? "" : documentation, Arrays.asList(constantName)));
+			reserveds.add(new Reserved(location, documentation == null ? "" : documentation, Collections.singletonList(constantName)));
 		}
 	}
 
